; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_ov511.c_ov51x_restart.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/video/extr_ov511.c_ov51x_restart.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_ov511 = type { i64, i64 }

@.str = private unnamed_addr constant [11 x i8] c"restarting\00", align 1
@BCL_OV518 = common dso_local global i64 0, align 8
@R51x_SYS_RESET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.usb_ov511*)* @ov51x_restart to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ov51x_restart(%struct.usb_ov511* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.usb_ov511*, align 8
  store %struct.usb_ov511* %0, %struct.usb_ov511** %3, align 8
  %4 = load %struct.usb_ov511*, %struct.usb_ov511** %3, align 8
  %5 = getelementptr inbounds %struct.usb_ov511, %struct.usb_ov511* %4, i32 0, i32 1
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %24

8:                                                ; preds = %1
  %9 = call i32 @PDEBUG(i32 4, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %10 = load %struct.usb_ov511*, %struct.usb_ov511** %3, align 8
  %11 = getelementptr inbounds %struct.usb_ov511, %struct.usb_ov511* %10, i32 0, i32 1
  store i64 0, i64* %11, align 8
  %12 = load %struct.usb_ov511*, %struct.usb_ov511** %3, align 8
  %13 = getelementptr inbounds %struct.usb_ov511, %struct.usb_ov511* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @BCL_OV518, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %20

17:                                               ; preds = %8
  %18 = load %struct.usb_ov511*, %struct.usb_ov511** %3, align 8
  %19 = call i32 @reg_w(%struct.usb_ov511* %18, i32 47, i32 128)
  br label %20

20:                                               ; preds = %17, %8
  %21 = load %struct.usb_ov511*, %struct.usb_ov511** %3, align 8
  %22 = load i32, i32* @R51x_SYS_RESET, align 4
  %23 = call i32 @reg_w(%struct.usb_ov511* %21, i32 %22, i32 0)
  store i32 %23, i32* %2, align 4
  br label %25

24:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %25

25:                                               ; preds = %24, %20
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local i32 @PDEBUG(i32, i8*) #1

declare dso_local i32 @reg_w(%struct.usb_ov511*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
